# pystreamapi

./: .deepsource.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  SUMMARY.md  contribute.md  examples.md  performance.md  pylintrc  pyproject.toml  quick-start.md  requirements.txt  setup.cfg  setup.py  sonar-project.properties  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  main.yml  pylint.yml  python-publish.yml  unittests.yml
pystreamapi/: __init__.py  __iterate.py  __optional.py  __stream.py  __stream_converter.py  stream.py
pystreamapi/_itertools/: tools.py
pystreamapi/_lazy/: process.py  queue.py
pystreamapi/_parallel/: fork_and_join.py  itertools.py  parallelizer.py
pystreamapi/_streams/: __base_stream.py  __parallel_stream.py  __sequential_stream.py
pystreamapi/_streams/error/: __error.py  __levels.py  __sentinel.py
pystreamapi/_streams/numeric/: __numeric_base_stream.py  __parallel_numeric_stream.py  __sequential_numeric_stream.py
pystreamapi/conditions/: __date.py  __init__.py  __numeric.py  __string.py  combiners.py  date.py  numeric.py  string.py  types.py
pystreamapi/lazy/: process.py  queue.py
pystreamapi/loaders/: __csv_loader.py  __init__.py  __lazy_file_iterable.py  __loader_utils.py
pystreamapi/loaders/__csv/: __csv_loader.py
pystreamapi/loaders/__json/: __json_loader.py
pystreamapi/loaders/__xml/: __xml_loader.py
pystreamapi/loaders/__yaml/: __yaml_loader.py
pystreamapi/parallel/: itertools.py
pystreamapi/streams/: __base_stream.py  __parallel_stream.py  __sequential_stream.py  basestream.py
reference/: data-loaders.md
reference/api-reference/: README.md  error-handling.md  intermediate-operations.md  numeric-stream.md  terminal-operations.md
reference/conditions/: README.md  date-conditions.md  numeric-conditions.md  string-conditions.md  type-conditions.md
tests/: date_test.py  file_test.py  helper.py  test_base_stream.py  test_combiners_conditions.py  test_csv_loader.py  test_date_conditions.py  test_date_conditions_type_date.py  test_error_handler.py  test_error_handler_streams.py  test_fork_and_join.py  test_iterate.py  test_json_loader.py  test_loaders.py  test_numeric_base_stream.py  test_numeric_conditions.py  test_numeric_stream_implementation.py  test_optional.py  test_parallel_functions.py  test_process.py  test_queue.py  test_sequential_stream.py  test_stream.py  test_stream_closed.py  test_stream_converter.py  test_stream_implementation.py  test_string_conditions.py  test_type_conditions.py  test_xml_loader.py
tests/_conditions/: date_test.py  test_combiners_conditions.py  test_date_conditions.py  test_date_conditions_type_date.py  test_string_conditions.py  test_type_conditions.py
tests/_itertools/: test_itertools.py
tests/_lazy/: helper.py  test_process.py  test_queue.py
tests/_loaders/: test_csv_loader.py  test_json_loader.py  test_xml_loader.py  test_yaml_loader.py
tests/_parallel/: test_fork_and_join.py  test_parallel_stream.py
tests/_streams/: test_base_stream.py  test_stream_converter.py  test_stream_implementation.py
tests/_streams/error/: test_error_handler.py
tests/_streams/numeric/: test_numeric_base_stream.py  test_numeric_stream_implementation.py
tests/assets/: data.csv  data2.csv
