[tool.poetry]
name = "streams.py"
version = "1.2.1"
authors = ["Stefan Garlonta <stefan@pickwicksoft.org>"]
description = "A stream library for Python inspired by Java Stream API"
keywords = ["streams", "parallel", "data"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/PickwickSoft/pystreamapi"
repository = "https://github.com/PickwickSoft/pystreamapi"
readme = "README.md"
packages = [
    { include = "pystreamapi" },
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
joblib = ">=1.2,<1.4"
defusedxml = { version = ">=0.7,<0.8", optional = true }

[tool.poetry.extras]
xml_loader = ["defusedxml"]
all = ["defusedxml"]

[tool.poetry.group.test.dependencies]
parameterized = "*"
pylint = "*"
coverage = "*"

[tool.poetry.group.lint.dependencies]
pylint = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
