[metadata]
name = pystreamapi
version = attr: pystreamapi.__version__
author = Stefan Garlonta
author_email = stefan@pickwicksoft.org
url = https://github.com/PickwickSoft/pystreamapi
description = A stream library for Python inspired by Java Stream API
long_description = file: README.md
long_description_content_type = text/markdown
keywords = streams, parallel, data
license = GPL-3.0 license
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
optional.py~=
    1.3.2
    joblib~=1.1.0

[options.extras_require]
dev =
    parameterized~=0.8.1

[options.package_data]
* = README.md